<resources>
    <string name="admin">Administrador</string>
    <string name="usuario_general">Usuario general</string>
    <string name="app_name">EcoMarket</string>
    <string name="horas">08</string>
    <string name="minutos">00</string>
    <string name="segundos">00</string>
    <string name="puntos">:</string>
    <string name="inicio_Sesion">Iniciar Sesion</string>
    <string name="Ejemplocorreo">Ejemplo@correo.edu.co</string>
    <string name="contraseña">**********</string>
    <string name="resetPasswordLabel">Recuperar contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="sin_cuenta">¿No tienes cuenta?</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contraseña_texto">Contraseña</string>
    <string name="descripcion_registro">Completa el formulario para crear tu cuenta</string>
    <string name="Regresar_login">Regresar Login\n</string>
    <string name="enviar">Enviar</string>
    <string name="Recuperar">Recuperar contraseña</string>
    <string name="cuenta">¿ya tienes cuenta?</string>
    <string name="perfil_editar">Editar Perfil</string>
    <string name="perfil_guardar_cambios">Guardar Cambios</string>
    <string name="perfil_contraseña_hint">Contraseña</string>
    <string name="nombre">Nombre\n</string>
    <string name="perfil_foto_descripcion">Cambiar foto</string>
    <string name="open_drawer">abrir\n</string>
    <string name="close_drawer">cerrar\n</string>
    <string name="home">Home\n</string>
    <string name="perfil">Perfil\n</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="productos">Productos</string>
    <string name="carrito">Carrito\n</string>
    <string name="texto">Pepita recibelo en :</string>
    <string name="horas_text">Horas\n</string>
    <string name="minutos_text">Minutos</string>
    <string name="Segundos_text">Segundos</string>
    <string name="bienvenid">bienvenid@</string>
    <string name="perfil_imagen_descripcion">"eco marxet imagen"</string>
    <string name="perfil_nombre_completo">Pepito Perez</string>
    <string name="perfil_correo_electronico">PepitoPerez@ucompensar.edu.co\n</string>
    <string name="perfil_numero_telefono">1234567809</string>
    <string name="carrito_titulo">Carrito</string>
    <string name="textosprod">Texto Producto\n</string>
    <string name="resumen">Resumen</string>
    <string name="pagar_ahora">Pagar ahora</string>
    <string name="eliminar">Eliminar</string>
    <string name="olvidarc">¿Olvidaste Contraseña?</string>
    <string name="nombre_bolsa_animales">Bolsa de animales</string>
    <string name="descripcion_bolsa_animales">Bolsa de tela con diseño de animales</string>
    <string name="precio_bolsa_animales">Precio: $10.600</string>
    <string name="disponible_bolsa_animales">Disponible: 10 unidades</string>
    <string name="nombre_bolsa_5kg">Bolsa de 5kg</string>
    <string name="descripcion_bolsa_5kg">Bolsa de tela resistente</string>
    <string name="precio_bolsa_5kg">Precio: $20.400</string>
    <string name="disponible_bolsa_5kg">Disponible: 5 unidades</string>
    <string name="nombre_bolsa_garfield">Bolsa de Garfield</string>
    <string name="descripcion_bolsa_garfield">Bolsa de tela con diseño de Garfield</string>
    <string name="precio_bolsa_garfield">Precio: $20.400</string>
    <string name="disponible_bolsa_garfield">Disponible: 7 unidades</string>
    <string name="nombre_bolsa_mandala">Bolsa de Mandalas</string>
    <string name="descripcion_bolsa_mandala">Bolsa de tela con diseño de mandalas</string>
    <string name="precio_bolsa_mandala">Precio: $20.400</string>
    <string name="disponible_bolsa_mandala">Productos agotados</string>
    <string name="telefono">Telefono\n</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="correo_electronico2">Correo Electronico</string>
        <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_apellidos">Apellidos Completo</string>
        <string name="hint_email">Correo Electrónico</string>
        <string name="hint_password">Contraseña</string>
        <string name="hint_confirm_password">Confirmar Contraseña</string>
        <string name="boton_registrar">Registrarse</string>
    <string name="terminos_y_condiciones">Terminos y condiciones</string>
        <string name="texto_ir_a_login">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="ingresa_google">Ingresa con Google</string>
    <string name="defaultAddress">Ventura Terreros</string>
    <string name="storeAddressOne">Gran Plaza soacha</string>
    <string name="storeAddressTwo">Unisur</string>
    <string name="titleStoreAddresses">"Maps"</string>
    <string name="Productos_disponibles">Productos disponibles</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="Agotado">Agotado</string>
    <string name="Dispo">Disponible</string>

</resources>
