<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp">

        <ImageView
            android:layout_width="319dp"
            android:layout_height="276dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/imagen_borde_redondo"
            android:clipToOutline="true"
            android:contentDescription="@string/perfil_imagen_descripcion"
            android:elevation="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/eco_market" />

        <TextView
            android:id="@+id/tv_nombre"
            style="@style/EditTextRounded"
            android:layout_width="175dp"
            android:layout_height="37dp"
            android:layout_marginBottom="16dp"
            android:text="@string/perfil_nombre_completo"
            android:textColor="@color/negro"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_correo"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil_correo_electronico"
            android:textSize="16sp"
            android:textColor="@color/negro"
            android:textStyle="bold"
            style="@style/EditTextRounded"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_telefono"
            style="@style/EditTextRounded"
            android:layout_width="149dp"
            android:layout_height="38dp"
            android:layout_marginBottom="32dp"
            android:text="@string/perfil_numero_telefono"
            android:textColor="@color/negro"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:backgroundTint="@color/verde_fondo"
            android:text="@string/perfil_editar"
            android:textColor="@color/blanco" />
    </LinearLayout>
</ScrollView>
