<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistroFragment"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/tv_descripcion_contraseña2"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/correo_electronico"
        android:textColor="@color/negro"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion_contraseña"
        app:layout_constraintVertical_bias="0.844" />

    <TextView
        android:id="@+id/buttonRegresar"
        android:layout_width="180dp"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:text="@string/cuenta"
        android:textAlignment="center"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecuperacion"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textRegistrologin"
        android:layout_width="108dp"
        android:layout_height="19dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="112dp"
        android:text="@string/inicio_Sesion"
        android:textColor="@color/verde_fondo"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecuperacion"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_descripcion_contraseña"
        android:layout_width="247dp"
        android:layout_height="128dp"
        android:layout_marginBottom="172dp"
        android:gravity="center"
        android:text="@string/Recuperar"
        android:textColor="@color/verde_fondo"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextRounded"
        android:layout_width="323dp"
        android:layout_height="64dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Correo Electronico"
        android:inputType="text"
        android:textColor="@color/negro"
        android:textColorHint="@color/gris_letra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/buttonRecuperacion"
        android:layout_width="217dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/verde_fondo"
        android:text="@string/enviar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blanco"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        app:strokeColor="@color/verde_fondo"
        app:strokeWidth="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>