<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <ImageView
        android:id="@+id/iv_foto_perfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/borde_peque"
        android:clipToOutline="true"
        android:contentDescription="@string/perfil_foto_descripcion"
        android:elevation="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ecosinletra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_cambiar_foto"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="80dp" />

    <Button
        android:id="@+id/btn_cambiar_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde_boton"
        android:text="@string/perfil_foto_descripcion"
        android:textColor="@color/gris_letra"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/negro"
        app:layout_constraintTop_toBottomOf="@+id/btn_cambiar_foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/negro"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_rounded"
        android:hint="@string/perfil_contraseña_hint"
        android:inputType="phone"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/negro"
        app:layout_constraintTop_toBottomOf="@+id/et_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/verde_fondo"
        android:paddingVertical="12dp"
        android:text="@string/perfil_guardar_cambios"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
